--- a/styles/contact.css
+++ b/styles/contact.css
@@ -149,23 +149,15 @@ p
 	color: black;
 }
 
-.introD {
+.contactD {
 	display: block;
-	padding: 0px 20px 20px 20px;
-	border: 10px groove rgb(36,36,209);
-	border-spacing: 100px;
+	padding: 0px 50px 0px 50px;
+	border: 8px groove rgb(36,36,209);
+	border-spacing: 75px;
 	background-color: rgb(234,143,255);
-}
-
-.center {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 footer {
 	position: relative;
 	top: 275px;	
 }
-
-/*rgb(173,62,181)*/
